--- a/src/Formee/Clients/Client.Web/wwwroot/index.html
+++ b/src/Formee/Clients/Client.Web/wwwroot/index.html
@@ -6,20 +6,24 @@
     <title>Client.Web</title>
     <base href="/" />
 
-    <link rel="stylesheet" 
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" 
-          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" 
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
           crossorigin="anonymous"
           referrerpolicy="no-referrer" />
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 
-    <link href="_content/Syncfusion.Blazor/styles/bootstrap5.css" rel="stylesheet" />
+    <link href="_content/Clients.Web.Components/css/formee.styles.css" rel="stylesheet" />
 
-    <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js" 
+    <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js"
             type="text/javascript"></script>
 
     <link href="_content/Clients.Web.Components/css/app.css" rel="stylesheet" />
 
-    
+
     <link href="Client.Web.styles.css" rel="stylesheet" />
 </head>
 
@@ -31,7 +35,10 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
 </body>
 
 </html>
