add identity management

--- a/src/Formee/Clients/Client.Web/wwwroot/index.html
+++ b/src/Formee/Clients/Client.Web/wwwroot/index.html
@@ -18,12 +18,12 @@
 
     <link href="_content/Clients.Web.Components/css/formee.styles.css" rel="stylesheet" />
 
-    <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js"
+    <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js" defer
             type="text/javascript"></script>
 
     <link href="_content/Clients.Web.Components/css/app.css" rel="stylesheet" />
 
-    <script href="_content/Clients.Web.Components/js/app.js"
+    <script href="_content/Clients.Web.Components/js/app.js" defer
             rel="stylesheet">
     </script>
 
