--- a/src/Formee/FrontEnd/Users/Client.Web/wwwroot/index.html
+++ b/src/Formee/FrontEnd/Users/Client.Web/wwwroot/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app"></div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
@@ -39,11 +39,13 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+
     <script src="_framework/blazor.webassembly.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
 
-    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+
 </body>
 
 </html>
